# cis-lab-smart-lock

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg
notebook/: test_api.ipynb  test_bot_api.ipynb
scripts/: .env.sample  detach.py  dump.py  switch.py
src/: .env.sample  auth.py  detach.py  dump.py  lock.py  logger.py  main.py  reader.py
